--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>This is a header</h1>
-    <p> This is a header</p>
+    <p> This is a paragraph</p>
+    <p> This is a paragraph</p>
 </body>
 </html>
